# canvibe

./: .gitignore  API.md  AUTO_TEST.md  BUILD_FIX.md  INSTALL_C++_TOOLS.md  NEXT_STEPS.md  QUICK_START.md  README.md  SETUP.md  STATUS.md  TUNNEL.md  create-icon-simple.ps1  index.html  package-lock.json  package.json  test-api.ps1
src/: App.css  App.tsx
src-tauri/: Cargo.toml  create-icon.js  create-icon.ps1  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  main.rs
src/components/: Canvas.tsx  Edge.tsx  Node.tsx  ProjectSelector.tsx
src/services/: api.ts  eventLog.ts  fileWatcher.ts  git.ts  projection.ts  sync.ts
src/types/: events.ts  nodes.ts
src/utils/: isTauri.ts
